<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:gravity="center_vertical" >
    <LinearLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:baselineAligned="false"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="@color/c_dark" >
        <LinearLayout
            android:id="@+id/header_container"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            style="@style/style_headerContainer">
            <TextView
                android:id="@+id/header"
                android:text="@string/view_entryHeader"
                style="@style/style_header" />
        </LinearLayout>
        <TextView
            android:id="@+id/view_name"
            android:text="@string/view_name"
            style="@style/style_textView" />
        <EditText
            android:id="@+id/edit_name"
            android:hint="@string/edit_name"
            android:inputType="textPersonName"
            style="@style/style_editText" >
            <requestFocus />
        </EditText>
        <TextView
            android:id="@+id/view_age"
            android:text="@string/view_age"
            style="@style/style_textView" />
        <EditText
            android:id="@+id/edit_age"
            android:hint="@string/edit_age"
            android:inputType="number"
            style="@style/style_editText" >
        </EditText>
        <TextView
            android:id="@+id/view_food"
            android:text="@string/view_food"
            style="@style/style_textView" />
        <Spinner
            android:id="@+id/array_food"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/array_food"
            android:background="@android:color/white"/>
        <RelativeLayout
            android:id="@+id/btn_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin">
            <Button
                android:id="@+id/btn_done"
                android:layout_gravity="center_vertical"
                style="@style/style_btn"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:text="@string/btn_done" />
            <Button
                android:id="@+id/btn_add"
                style="@style/style_btn"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:text="@string/btn_add" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>